<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uts.harveys.com.harveys.Master.BarangInputActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        style="@style/Widget.AppCompat.ActionBar.Solid"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_barang_tambah"
            android:textColor="@color/colorMain"
            android:layout_marginStart="20dp"
            android:textSize="10pt"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_kode"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_barang_kode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_supplier"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:weightSum="6">
                <EditText
                    android:id="@+id/txt_frm_barang_supplier"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:padding="10dp"
                    android:textColorHint="@color/colorMain"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorMain"
                    android:inputType="text" />
                <EditText
                    android:id="@+id/txt_frm_barang_id_supplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:visibility="gone"/>
                <View
                    android:layout_weight="0.01"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:background="@color/colorMain"/>
                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/txt_frm_barang_btn_supplier"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.99"
                    android:text="@string/button_cari"
                    android:textColor="@color/colorMain"
                    android:theme="@style/buttonstyle_dark" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_nama"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_barang_nama"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_jenis"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_barang_jenis"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_warna"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_barang_warna"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_size"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_barang_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_beli"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_barang_beli"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_jual"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_barang_jual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="numberDecimal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/barang_stok"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_barang_stok"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="number" />
            <Button
                android:id="@+id/btn_simpan_barang"
                android:theme="@style/buttonstyle_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_simpan"
                android:textColor="@color/colorMain"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
