<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uts.harveys.com.harveys.Master.SupplierEditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        style="@style/Widget.AppCompat.ActionBar.Solid"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_supplier_tambah"
            android:textColor="@color/colorMain"
            android:layout_marginStart="20dp"
            android:textSize="10pt"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/supplier_kode"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_supplier_kode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/supplier_nama"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_supplier_nama"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="text" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/supplier_alamat"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_supplier_alamat"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:gravity="top"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMain"
                android:text="@string/supplier_telp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/txt_frm_supplier_telp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColorHint="@color/colorMain"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="10dp"
                android:inputType="phone" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_edit_supplier"
                    android:theme="@style/buttonstyle_dark"
                    android:textColor="@color/colorMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/button_edit"/>
                <Button
                    android:id="@+id/btn_hapus_supplier"
                    android:theme="@style/buttonstyle_dark"
                    android:textColor="@color/colorMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/button_hapus"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
